errors.txt
g++ -Wall -O0 -std=c++11 main.cpp UI.cpp graphics.cpp plane.cpp map.cpp
In file included from plane.hpp:4:0,
                 from all.hpp:5,
                 from main.cpp:1:
graphics.hpp:141:19: error: ‘vector’ does not name a type
     Polygon(const vector<Point>&, const Color& fc = black);
                   ^
graphics.hpp:141:25: error: expected ‘,’ or ‘...’ before ‘<’ token
     Polygon(const vector<Point>&, const Color& fc = black);
                         ^
graphics.hpp:144:5: error: ‘vector’ does not name a type
     vector<Point> Points;
     ^
graphics.hpp:151:21: error: expected ‘)’ before ‘<’ token
     Wireframe(vector<Shape*> s) : shapes(s) {};
                     ^
graphics.hpp:153:5: error: ‘vector’ does not name a type
     vector<Shape*> shapes;
     ^
In file included from all.hpp:5:0,
                 from main.cpp:1:
plane.hpp: In constructor ‘plane::plane(Wireframe, Point, float, float, float, float, float, float)’:
plane.hpp:43:15: warning: ‘plane::looks’ will be initialized after [-Wreorder]
     Wireframe looks;
               ^
plane.hpp:16:11: warning:   ‘float plane::angleOfAttack’ [-Wreorder]
     float angleOfAttack;
           ^
In file included from all.hpp:5:0,
                 from main.cpp:1:
plane.hpp:8:5: warning:   when initialized here [-Wreorder]
     plane(Wireframe i, Point l, float maxPower, float aSize, float eSize, float rSize, float cSection, float rcSection = 0) : looks(i), angleOfAttack(0), thrustPercent(0)     ^
In file included from all.hpp:5:0,
                 from main.cpp:1:
plane.hpp:33:11: warning: ‘plane::thrustPercent’ will be initialized after [-Wreorder]
     float thrustPercent;
           ^
plane.hpp:32:11: warning:   ‘float plane::maxThrust’ [-Wreorder]
     float maxThrust;
           ^
In file included from all.hpp:5:0,
                 from main.cpp:1:
plane.hpp:8:5: warning:   when initialized here [-Wreorder]
     plane(Wireframe i, Point l, float maxPower, float aSize, float eSize, float rSize, float cSection, float rcSection = 0) : looks(i), angleOfAttack(0), thrustPercent(0)     ^
In file included from all.hpp:5:0,
                 from main.cpp:1:
plane.hpp:32:11: warning: ‘plane::maxThrust’ will be initialized after [-Wreorder]
     float maxThrust;
           ^
plane.hpp:17:11: warning:   ‘float plane::bankAngle’ [-Wreorder]
     float bankAngle;
           ^
In file included from all.hpp:5:0,
                 from main.cpp:1:
plane.hpp:8:5: warning:   when initialized here [-Wreorder]
     plane(Wireframe i, Point l, float maxPower, float aSize, float eSize, float rSize, float cSection, float rcSection = 0) : looks(i), angleOfAttack(0), thrustPercent(0)     ^
In file included from all.hpp:7:0,
                 from main.cpp:1:
map.hpp: At global scope:
map.hpp:6:1: error: ‘vector’ does not name a type
 vector<vector<double>> heights; // Global variables are sins, I know...
 ^
UI.cpp: In member function ‘void UIHandler::draw(const Rectangle&)’:
UI.cpp:14:7: warning: unused variable ‘width’ [-Wunused-variable]
   int width = bottomRight.x - topLeft.x;
       ^
UI.cpp:15:7: warning: unused variable ‘height’ [-Wunused-variable]
   int height = topLeft.y - bottomRight.y;
       ^
UI.cpp: In member function ‘void UIHandler::draw(const Polygon&)’:
UI.cpp:21:21: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
   for (int j = 0; j < p.Points.size()-1; j++) {
                     ^
In file included from plane.cpp:1:0:
plane.hpp: In constructor ‘plane::plane(Wireframe, Point, float, float, float, float, float, float)’:
plane.hpp:43:15: warning: ‘plane::looks’ will be initialized after [-Wreorder]
     Wireframe looks;
               ^
plane.hpp:16:11: warning:   ‘float plane::angleOfAttack’ [-Wreorder]
     float angleOfAttack;
           ^
In file included from plane.cpp:1:0:
plane.hpp:8:5: warning:   when initialized here [-Wreorder]
     plane(Wireframe i, Point l, float maxPower, float aSize, float eSize, float rSize, float cSection, float rcSection = 0) : looks(i), angleOfAttack(0), thrustPercent(0),
     ^
In file included from plane.cpp:1:0:
plane.hpp:33:11: warning: ‘plane::thrustPercent’ will be initialized after [-Wreorder]
     float thrustPercent;
           ^
plane.hpp:32:11: warning:   ‘float plane::maxThrust’ [-Wreorder]
     float maxThrust;
           ^
In file included from plane.cpp:1:0:
plane.hpp:8:5: warning:   when initialized here [-Wreorder]
     plane(Wireframe i, Point l, float maxPower, float aSize, float eSize, float rSize, float cSection, float rcSection = 0) : looks(i), angleOfAttack(0), thrustPercent(0),
     ^
In file included from plane.cpp:1:0:
plane.hpp:32:11: warning: ‘plane::maxThrust’ will be initialized after [-Wreorder]
     float maxThrust;
           ^
plane.hpp:17:11: warning:   ‘float plane::bankAngle’ [-Wreorder]
     float bankAngle;
           ^
In file included from plane.cpp:1:0:
plane.hpp:8:5: warning:   when initialized here [-Wreorder]
     plane(Wireframe i, Point l, float maxPower, float aSize, float eSize, float rSize, float cSection, float rcSection = 0) : looks(i), angleOfAttack(0), thrustPercent(0),
     ^
map.cpp: In function ‘void generateMap(int, int)’:
map.cpp:16:43: error: ambiguating new declaration of ‘void generateMap(int, int)’
 void generateMap(int longSize, int latSize) {
                                           ^
In file included from map.cpp:1:0:
map.hpp:8:8: note: old declaration ‘double generateMap(int, int)’
 double generateMap(int longSize, int latSize); // longSize is the maximum longitude, for negative longitudes, that number is simply mirrored over. Same for latitude
        ^
Makefile:6: recipe for target 'all' failed
make: *** [all] Error 1
